Bug 404398 - Ability to move partition of unknown type
Summary: Ability to move partition of unknown type
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-15 16:16 UTC by Andrew Shark
Modified: 2020-10-04 20:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Shark 2019-02-15 16:16:42 UTC
SUMMARY
It would be good to be able to move partitions of unknown type. I needed to move out of the way my microsoft reserved partition (16MiB) to be able to grow my Linux partiton. With kde partition manager it is impossible. But I successfully did it with gparted.

STEPS TO REPRODUCE
1. Find a gap in your storage device.
2. Create an unformatted partition there, making its size less than gap
3. Try to move this partition

OBSERVED RESULT
Function is not available

EXPECTED RESULT
Ability to move expected

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.0
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1
Comment 1 Andrius Štikonas 2019-02-15 17:50:40 UTC
Well, in principle this can be added.

But then there is a risk that we incorrectly move some partition of unknown type.
Not msft-reserved as this partition is just a blank partition but e.g. FAT/NTFS need extra adjustments after move (I think update boot sector location), gparted probably doesn't do that but I haven't checked recently.
Comment 2 Andrew Shark 2019-02-15 18:25:30 UTC
As I remember, gparted shows a warning that windows may be unbootable after moving, so I guess that it doesn't make adjustments. Yes, need to check that.
Anyway, specifically for msr we may allow moving.
Comment 3 Andrius Štikonas 2019-02-15 19:16:40 UTC
Git commit ecb78121f36d6e30e164e5ea7f3145504765f48a by Andrius Štikonas.
Committed on 15/02/2019 at 19:16.
Pushed by stikonas into branch 'master'.

Allow moving partitions of unknown type.

This usually be safe. There is a theoretical chance that some
unknown OS fails to boot, but I'm not aware of any such cases.

M  +3    -0    src/fs/unknown.cpp
M  +7    -2    src/fs/unknown.h

https://invent.kde.org/kde/kpmcore/commit/ecb78121f36d6e30e164e5ea7f3145504765f48a
Comment 4 Andrew Shark 2020-01-28 10:03:09 UTC
Is it released? I still cannot move partitions of unknown fs type.
KPMcore 4.0.1
KDE Partition Manager 4.0.0
OS ArchLinux
Comment 5 Andrius Štikonas 2020-01-28 19:11:01 UTC
Hmm, the commit was done before release. So it should have been released. I'll have to investigate this again...
Comment 6 Andrius Štikonas 2020-10-04 20:18:31 UTC
Git commit 4819eec59b96bc73e5444f8bf29365884d647327 by Andrius Štikonas.
Committed on 04/10/2020 at 20:18.
Pushed by stikonas into branch 'master'.

Allow moving partitions with unknown file system.

M  +1    -1    src/fs/unknown.cpp

https://invent.kde.org/system/kpmcore/commit/4819eec59b96bc73e5444f8bf29365884d647327
Comment 7 Andrius Štikonas 2020-10-04 20:19:07 UTC
(In reply to Ashark from comment #4)
> Is it released? I still cannot move partitions of unknown fs type.
> KPMcore 4.0.1
> KDE Partition Manager 4.0.0
> OS ArchLinux

Ok, fixed now, will be in 4.2.0 soon. It was a stupid copy-paste error.