Allow moving partitions of unknown type.

This usually be safe. There is a theoretical chance that some
unknown OS fails to boot, but I'm not aware of any such cases.

BUG: 404398